--- a/ms/invasibility-ms.tex
+++ b/ms/invasibility-ms.tex
@@ -116,7 +116,7 @@ Magni Olsen Kyrkjeeide: \url{https://orcid.org/0000-0002-7454-3652}
 \item
   Plantations of alien conifer species are common worldwide, and set to become even more prevalent in coming decades. The rate at which their offspring colonize surroundings varies among plantations, and the reasons for this variation are often unclear. To minimize the spread of so-called ``wildlings'' and the burden of conifer plantations on native ecosystems, managers need to know which ecosystems are most and least susceptible.
 \item
-  We compared how likely wildlings are to establish across a wide range of ecosystems, focusing on four groups of alien conifer species planted in Norway. We used data from detailed surveys around 82 plantations to model the relationship between ecosystem type and wildling abundance --- accounting for seed rain, climate, and other sources of variation between sites. We also tested whether differences in susceptibility between individual ecosystem types could be generalized based on broad, shared characteristics.
+  We compared how likely wildlings are to establish across a wide range of ecosystems, focusing on four groups of alien conifer species planted in Norway. We used data from detailed surveys around 82 plantations to model the relationship between ecosystem type and wildling abundance --- accounting for seed rain (estimated), climate, and other sources of variation between sites. We also tested whether differences in susceptibility between individual ecosystem types could be generalized based on broad, shared characteristics.
 \item
   We found that the rank order of ecosystems by susceptibility (modeled as relative establishment likelihood) differed from their rank order by wildling density, and that susceptibility generally varied as much or more than wildling density. For all species groups, relative establishment likelihoods spanned several orders of magnitude between the most and least susceptible ecosystems.
 \item
@@ -135,24 +135,24 @@ alien species, conifer, establishment likelihood, disturbance, invasibility, pla
 
 Plantations of alien conifers are widespread globally, and offspring from these plantations frequently establish in surrounding areas (Richardson and Rejmánek \protect\hyperlink{ref-richardsonConifersInvasiveAliens2004}{2004}).
 In many instances these naturalized offspring, or wildlings, harm biodiversity and other values, so controlling their spread is prudent.
-In particular, plantations contribute to the presence of alien conifers in protected areas, and generate substantial control costs as a result (McConnachie et al. \protect\hyperlink{ref-mcconnachieEstimatingEffectPlantations2015}{2015}).
+In particular, plantations that contribute to the presence of alien conifers in protected areas may generate substantial control costs as a result (McConnachie et al. \protect\hyperlink{ref-mcconnachieEstimatingEffectPlantations2015}{2015}).
 Controlling wildlings protects plantation surroundings and prevents secondary, potentially invasive spread.
 Accordingly, guidelines for sustainable use of alien trees stress that containing them to the areas set aside for their cultivation is fundamental to good forestry practice (Brundu et al. \protect\hyperlink{ref-brunduGlobalGuidelinesSustainable2020}{2020}).
 
-How many wildlings are present and how far they are from the plantation varies a lot from site to site, even among conspecific plantations of similar age (Nygaard and Øyen \protect\hyperlink{ref-nygaardSpreadIntroducedSitka2017}{2017}, Fernandes et al. \protect\hyperlink{ref-fernandesWhatDrivesEucalyptus2018}{2018}), which makes it harder to predict and manage their spread.
-To begin to understand this variation, we need to consider both dispersal and establishment (where establishment comprises germination and survival).
+The number of wildlings present and their distance from the plantation varies a lot from site to site, even among conspecific plantations of similar age (Nygaard and Øyen \protect\hyperlink{ref-nygaardSpreadIntroducedSitka2017}{2017}, Fernandes et al. \protect\hyperlink{ref-fernandesWhatDrivesEucalyptus2018}{2018}), which makes it hard to predict and manage their spread.
+To better understand this variation, we need to consider both dispersal and establishment.
 These jointly generate patterns of wildling abundance and spatial distribution.
-Dispersal at a given site is affected by conditions related to a species' dispersal syndrome --- for instance wind exposure and site topography, in the case of a wind-dispersed species.
-Likewise, establishment is affected by biotic and abiotic conditions where seeds arrive.
-In theory, conditions inhibiting either process may be exploited to suppress wildling spread.
+Dispersal at a given site is affected by conditions related to the species' dispersal syndrome --- for instance wind exposure and topography, in the case of a wind-dispersed species.
+Establishment is affected by biotic and abiotic conditions where seeds arrive.
+Inhibiting either process reduces wildling spread.
 
-Reducing establishment is of particular interest because it directly regulates wildling abundance.
+Inhibiting establishment is of particular interest because it directly regulates wildling abundance.
 The conditions affecting establishment are also generally easier to manipulate than those affecting dispersal, either directly through intervention or indirectly through site selection.
-The question, then, becomes: how can we identify establishment-inhibiting conditions in a manner applicable to plantation management?
+The question, then, is: how can we identify establishment-inhibiting conditions in a manner applicable to plantation management?
 
 In Norway --- and similarly in other countries --- the national land mapping classification system sorts variation in local ecological conditions (Halvorsen et al. \protect\hyperlink{ref-halvorsenSystematicsEcodiversityEcoSyst2020}{2020}).
 It builds on the continuum concept (Austin \protect\hyperlink{ref-austinContinuumConceptOrdination1985}{1985}), aiming for reproducible and value-neutral classification of ecosystems by rule-based discretization of species turnover along important environmental gradients (Halvorsen et al. \protect\hyperlink{ref-halvorsenSystematicsEcodiversityEcoSyst2020}{2020}).
-As a result, it encapsulates in its ecosystem types (hereafter: ``ecosystems'') much of the variation that is most likely to regulate wildling germination and survival --- in competition, nutrient availability, disturbance, and the like (Richardson and Pyšek \protect\hyperlink{ref-richardsonNaturalizationIntroducedPlants2012}{2012}).
+As a result, it encapsulates in its ecosystem types (hereafter: ``ecosystems'') much of the variation likely to regulate wildling establishment --- in competition, nutrient availability, disturbance, and the like (Richardson and Pyšek \protect\hyperlink{ref-richardsonNaturalizationIntroducedPlants2012}{2012}).
 It also identifies broad similarities between ecosystems, which might be used to tease out generic trends in establishment likelihood.
 
 To estimate how likely wildlings are to establish in particular ecosystems based on observations of their abundance around plantations, we must account for (1) seed dispersal, and (2) sources of variation in establishment beside ecosystem type.
@@ -195,7 +195,7 @@ We collected field data from each plantation in one of six field campaigns durin
 \end{figure}
 
 In the field, wildlings and ecosystems were mapped comprehensively within a 500x500 m plot framing the plantation of interest.
-Except in the 2016 field campaign, we also mapped as polygons any additional plantations of the same species within a larger 2x2 km plot.
+Except in the 2016 field campaign, we also mapped as polygons any additional plantations of the same species within an enclosing 2x2 km plot.
 We used GPS to register the point-positions of all wildlings over 30 cm in height, recording a single position for groups of wildlings occurring with less than 5 m between them.
 A few exceptionally dense groups of wildlings were mapped by registering polygons instead of points and estimating the number of individuals by transect counts.
 Concurrently, we registered polygons for all terrestrial ecosystems, following the Nature in Norway classification system (version 2.0 or 2.1, Halvorsen et al. \protect\hyperlink{ref-halvorsenNaturNorgeNiN2015}{2015}, based on the principles summarized in \protect\hyperlink{ref-halvorsenSystematicsEcodiversityEcoSyst2020}{2020}).
@@ -407,7 +407,7 @@ This result is consistent with the assumption that our WALD-derived estimates of
 Although survivorship bias in our data prevents rigorous comparison of seed dispersal models, the superior fits of models with WALD-derived seed rain offsets, compared to models with empirically-derived seed rain offsets, also suggests that the WALD model described seed dispersal well.
 Lastly, the mechanistic nature of the WALD model also makes us more confident in its estimates across species and sites than we would be in a purely phenomenological model (Bullock et al. \protect\hyperlink{ref-bullockAllDispersalFunctions2018}{2018}).
 Nevertheless, that seed rain was was modeled and not measured is a limitation of our method, and it makes the establishment likelihoods we estimate less certain.
-For example, changes in the spatial distribution of seed rain as a plantation grows older and taller were not accounted for.
+For example, changes in the distribution of seed rain as a plantation matures were not accounted for, nor was secondary seed dispersal from the few reproductive wildlings we observed.
 
 The inconsistent effects of elevation from plantation on wildling abundance suggests that terrain does not affect seed dispersal much or that vertical distance alone misses its effect.
 In any case, there is no rule of thumb for management that wildlings tend to move up or down slopes.
@@ -426,8 +426,8 @@ This means that our ability to predict the spread of these species at a specific
 Nevertheless, ecosystem comparisons can and should guide management.
 Bianchi et al.~(\protect\hyperlink{ref-bianchiMethodsPredictingSitka2019}{2019}) struggled to predict regeneration density within Sitka spruce plantations from bare ground cover, moss cover, plantation age, and plantation density.
 The inadequacy of plantation density as a predictor in this context suggests that the unexplained site-level variation in our models was not caused by differences in the densities of seed sources (which we assumed to be constant).
-Alternative explanations could include: (1) property owners removing wildlings, (2) disturbance legacies not captured in the delineation of ecosystem types (Miller et al. \protect\hyperlink{ref-millerHowDisturbanceHistory2021}{2021}), or (3) differing demographic characteristics among plantations (Taylor et al. \protect\hyperlink{ref-taylorDriversPlantInvasion2016}{2016}), potentially as a result of provenance.
-It is also possible that ecological differences between Lutz and Sitka spruce explain some of the site variation in that case.
+Alternative explanations could include: (1) property owners removing wildlings, (2) disturbance legacies not captured in the delineation of ecosystem types (especially in grazing pressure; Miller et al. \protect\hyperlink{ref-millerHowDisturbanceHistory2021}{2021}), or (3) differing demographic characteristics among plantations (especially in cone production; Taylor et al. \protect\hyperlink{ref-taylorDriversPlantInvasion2016}{2016}), potentially as a result of provenance.
+Ecological differences between Lutz and Sitka spruce might also explain some of the site variation in that case.
 
 \hypertarget{which-ecosystems-are-susceptible}{%
 \subsection{Which ecosystems are susceptible?}\label{which-ecosystems-are-susceptible}}
@@ -469,14 +469,13 @@ On the other hand, experiments might be more useful when observed wildling sprea
 \subsection{What do susceptible ecosystems have in common?}\label{what-do-susceptible-ecosystems-have-in-common}}
 
 The overarching characteristics that we used to aggregate ecosystems did not generalize differences in susceptibility well, especially not across species.
-Ecosystems belonging to the same hydrological category, or structured by the same processes, showed heterogeneous establishment likelihoods.
 Thus, we did not find strong similarities between susceptible ecosystems to guide wildling management irrespective of species.
-Note that slightly different sets of ecosystems comprised the strata for each species, depending on their presence in the data, and these differences in ecosystem composition help explain why the patterns of aggregated establishment likelihood varied between species.
+Note that different sets of ecosystems comprised the strata for each species, depending on their presence in the data, and these differences in ecosystem composition help explain why the patterns of aggregated establishment likelihood varied between species.
 This constraint hinders species comparisons but underlines our main takeaway from these results --- that the susceptibility of an individual ecosystem frequently diverges from those it is classified with.
 
 Within species, we urge careful interpretation of the comparisons among ecosystem categories and structuring processes.
 Many areas where conifer establishment is nearly impossible, like paved surfaces and annually plowed fields, count as terrestrial and strongly anthropogenically disturbed, which lowers the relative establishment likelihood of these two strata.
-Our results do not imply, for example, that a strong anthropogenic disturbance event will decrease establishment likelihood of Sitka/Lutz spruce relative to an ecosystem's prior state Indeed, Vikane et al.~(\protect\hyperlink{ref-vikaneInvasionCallunaHeath2013}{2013}) show that burning in coastal heathland increases Sitka spruce establishment.
+Our results do not imply, for example, that a strong anthropogenic disturbance event will decrease establishment likelihood of Sitka/Lutz spruce relative to an ecosystem's prior state Indeed, Vikane et al.~(\protect\hyperlink{ref-vikaneInvasionCallunaHeath2013}{2013}) show, for example, that burning in coastal heathland increases Sitka spruce establishment.
 Rather, we find that ecosystems structured by strong anthropogenic disturbance, on the whole, are less susceptible to Sitka/Lutz spruce wildlings than other ecosystems.
 
 \hypertarget{conclusions}{%
@@ -488,7 +487,7 @@ Specifically, differences in ecosystem susceptibility can be leveraged to
 reduce the rate of wildling establishment (potentially by orders of magnitude) through deliberate site selection for new plantations or targeted interventions around existing plantations.
 However, managers should be cautious judging ecosystem susceptibility based on descriptions of the species' autecology, observed wildling densities, or generalizations about susceptibility across ecosystems.
 
-One of main novelties of this study is that we inferred susceptibility/invasibility using mechanistically reconstructed, spatial estimates of seed rain.
+One of the main novelties of this study is that we inferred susceptibility/invasibility using mechanistically reconstructed, spatial estimates of seed rain.
 Scientists studying invasibility at national and continental scales have already recognized the importance of normalizing observed levels of invasion by a spatially explicit estimate of exposure (i.e.~propagule pressure; Chytrý et al. \protect\hyperlink{ref-chytrySeparatingHabitatInvasibility2008}{2008}\protect\hyperlink{ref-chytrySeparatingHabitatInvasibility2008}{a}).
 However, many studies quantifying ecosystem invasibility have not been able to adjust for propagule pressure, typically because it is impossible to reconstruct the underlying dispersal history (Catford et al. \protect\hyperlink{ref-catfordQuantifyingLevelsBiological2012}{2012}).
 We found that accounting for seed rain and other confounders of the relationship between ecosystems and wildling abundance reshuffles estimates of ecosystem invasibility.
